styling to portfolio items to avoid issues with text not fitting properly

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -458,12 +458,13 @@ section{
             h3{
                 font-size: 1.5rem;
                 color: var(--color-white);
-                margin-bottom: 1.5rem;
+                margin-bottom: 1.25rem;
+                margin-top: 5px;
             }
             .item-description{
                 margin-bottom: 1.5rem;
                 color: var(--color-grey-2);
-                font-size: 1.1rem;
+                font-size: 0.8rem;
                 padding: 10px;
                 line-height: 1.7rem;
             }
@@ -479,13 +480,13 @@ section{
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    margin: 0 1rem;
+                    margin: 5px 1rem;
                     cursor: pointer;
                     transition: all 0.4s ease-in-out;
                     i{
                         font-size: 1.5rem;
                         color: var(--color-white);
-                        margin: 0 1rem;
+                        margin: 5px 1rem;
                     }
                     &:hover{
                         background-color: var(--color-white);
